fix spacing of enter username field

--- a/packages/rocketchat-theme/client/imports/forms/tags.css
+++ b/packages/rocketchat-theme/client/imports/forms/tags.css
@@ -46,6 +46,7 @@
 	&__input {
 		margin: 0.25rem;
 		padding: 0.35rem 0.5rem;
+		width: 100%;
 
 		border: 0;
 
